Show actual images on the site instead of path

--- a/flockr/app/views/photos/index.html.erb
+++ b/flockr/app/views/photos/index.html.erb
@@ -15,7 +15,7 @@
     <% @photos.each do |photo| %>
       <tr>
         <td><%= photo.file_name %></td>
-        <td><%= photo.path %></td>
+        <td><%= image_tag(photo.path) %></td>
         <td><%= link_to 'Show', user_photo_path(@user, photo) %></td>
         <td><%= link_to 'Edit', edit_user_photo_path(@user, photo) %></td>
         <td><%= link_to 'Destroy', user_photo_path(@user, photo), method: :delete, data: { confirm: 'Are you sure?' } %></td>
