--- a/flockr/app/views/photos/_form.html.erb
+++ b/flockr/app/views/photos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@user, @photo]) do |f| %>
+<%= form_for(@photo, url: user_photo_path(@user, @photo)) do |f| %>
   <% if @photo.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@photo.errors.count, "error") %> prohibited this photo from being saved:</h2>
