--- a/flockr/app/views/users/show.html.erb
+++ b/flockr/app/views/users/show.html.erb
@@ -5,5 +5,6 @@
   <%= @user.email %>
 </p>
 
+<%= link_to 'Photos', user_photos_path(@user) %> |
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
